--- a/HedgeModManager/HedgeApp.xaml
+++ b/HedgeModManager/HedgeApp.xaml
@@ -51,6 +51,8 @@
             <local:BoolToGridHeightConverter x:Key="BoolToGridHeightConverter"/>
             <system:Double x:Key="HMM.Window.DialogBottomHeight">45</system:Double>
 
+            <BitmapImage x:Key="AppIcon" UriSource="Resources/Graphics/icon256.png"/>
+            
             <Style TargetType="{x:Type UserControl}" x:Key="DesignTimeStyle">
                 <Setter Property="Background" Value="{DynamicResource HMM.Window.BackgroundBrush}"/>
             </Style>
@@ -163,7 +165,7 @@
                                         <RowDefinition Height="32"/>
                                         <RowDefinition Height="*"/>
                                     </Grid.RowDefinitions>
-                                    <Image Width="24" Height="24" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="8,4,0,0" Source="Resources/Graphics/icon256.png"/>
+                                    <Image Width="24" Height="24" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="8,4,0,0" Source="{DynamicResource AppIcon}"/>
                                     <Label Height="33" HorizontalAlignment="Left" VerticalAlignment="Center" Margin="38,10,112,0" Foreground="#E9E9E9">
                                         <TextBlock TextTrimming="CharacterEllipsis" Text="{TemplateBinding Title}"/>
                                     </Label>
