--- a/HedgeModManager/UI/AboutWindow.xaml
+++ b/HedgeModManager/UI/AboutWindow.xaml
@@ -37,7 +37,7 @@
                     <Label Content="Skyth"/>
                     <Label Content="Ahremic"/>
                     <Label Content="Radfordhound"/>
-                    <Label Content="PTKickass"/>
+                    <Label Content="PTKay"/>
                     <Label Content="M&amp;M"/>
                     <Label Content="Hyper"/>
                     <Label Content="Wam"/>
@@ -45,7 +45,7 @@
                 <StackPanel Grid.Column="1">
                     <Label Content="Project lead, HE2ML"/>
                     <Label Content="Project lead, HE1ML"/>
-                    <Label Content="RainbowModLoader, Contributing to HE1ML"/>
+                    <Label Content="RainbowModLoader, contributing to HE1ML"/>
                     <Label Content="Contributing to HE1ML"/>
                     <Label Content="Base Design"/>
                     <Label Content="Contributing to the project"/>
@@ -63,7 +63,7 @@
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
                     <StackPanel Grid.Column="0">
-                        <Label Content="PTKickass"/>
+                        <Label Content="PTKay"/>
                         <Label Content="JoeyLaw"/>
                         <Label Content="Wr (AlanYe-Dev)"/>
                         <Label Content="LJSTAR"/>
