--- a/HedgeModManager/UI/AboutWindow.xaml
+++ b/HedgeModManager/UI/AboutWindow.xaml
@@ -21,7 +21,7 @@
         </Grid.ColumnDefinitions>
         <StackPanel Grid.Row="0" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Center">
             <Image Width="64" Height="64" Source="/Resources/Graphics/icon256.png"/>
-            <Label Content="Hedge Mod Manager" Height="Auto" Width="Auto" FontSize="36"/>
+            <Label Content="{Binding ProgramName, Source={x:Static Application.Current}}" Height="Auto" Width="Auto" FontSize="36"/>
         </StackPanel>
         <Label Content="{StaticResource AboutWindowUILine1}" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Top" Grid.Row="1"/>
         <Label Content="{StaticResource AboutWindowUILine2}" Grid.ColumnSpan="2" HorizontalAlignment="Center" Margin="0,20,0,0" VerticalAlignment="Top" Grid.Row="1"/>
