--- a/HedgeModManager/UI/ExceptionWindow.xaml
+++ b/HedgeModManager/UI/ExceptionWindow.xaml
@@ -9,7 +9,7 @@
              Height="600" Width="1000" Title="{DynamicResource ExceptionWindowTitle}"
              WindowStartupLocation="CenterScreen" Loaded="Window_Loaded" Style="{StaticResource HedgeWindow}">
     <Grid>
-        <Label x:Name="Status" Content="{Binding UpdateStatus}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,0,0" Background="#000000"/>
+        <Label x:Name="Status" Content="{Binding UpdateStatus}" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,0,0,0"/>
         <Label x:Name="Header" Content="{DynamicResource ExceptionWindowCrash}" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Height="62" FontSize="36" Foreground="#0066CC"/>
         <TextBox x:Name="TextBox_ExceptionInfo" Margin="10,77,10,70" Text="Exception Info goes here" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" 
                  IsReadOnly="True" Foreground="{DynamicResource HMM.Menu.DisabledTextColor}" />
